turn into final some variables,