@@ -1,13 +1,14 @@
 package it.polimi.ingsw.am22;
 
+import it.polimi.ingsw.am22.Building.Building;
 import java.util.ArrayList;
 import java.util.List;
 
 public class Board {
-    private List<Card> upperRow;
-    private List<Card> lowerRow;
-    private TurnOrderTile turnOrderTile;
-    private List<OfferTile> offerTrack;
+    private final List<Card> upperRow;
+    private final List<Card> lowerRow;
+    private final TurnOrderTile turnOrderTile;
+    private final List<OfferTile> offerTrack;
 
     public Board(int numPlayers) {
         upperRow = new ArrayList<>();
@@ -78,18 +79,18 @@ public class Board {
         int cardsNeeded = turnOrderTile.getSlots().size() + 1 - upperRow.size();
         for (int i = 0; i < cardsNeeded; i++) {
             if (!tribeDeck.isEmpty()) {
-                upperRow.add(tribeDeck.remove(0));
+                upperRow.add(tribeDeck.removeFirst());
             }
         }
 
-        if (!upperRow.isEmpty() && upperRow.get(0).getEra() != currentEra) {
-            return upperRow.get(0).getEra();
+        if (!upperRow.isEmpty() && upperRow.getFirst().getEra() != currentEra) {
+            return upperRow.getFirst().getEra();
         }
         return currentEra;
     }
 
     public void revealNewBuildings(List<Building> newBuildings) {
-        upperRow.addAll(newBuildings);
+        this.upperRow.addAll(newBuildings);
     }
     // --- GETTERS ---
     public List<Card> getUpperRow() { return upperRow; }
